--- a/packages/core/src/browser/style/view-container.css
+++ b/packages/core/src/browser/style/view-container.css
@@ -32,6 +32,10 @@
   width: 100%;
 }
 
+.theia-view-container > .lm-SplitPanel > :nth-child(7) {
+  display: none;
+}
+
 .theia-view-container > .lm-SplitPanel > .lm-SplitPanel-child {
   min-width: 50px;
   min-height: var(--theia-content-line-height);
