--- a/packages/core/src/browser/style/breadcrumbs.css
+++ b/packages/core/src/browser/style/breadcrumbs.css
@@ -15,11 +15,12 @@
  ********************************************************************************/
 
 :root {
-  --theia-breadcrumbs-height: 100px;
+  --theia-breadcrumbs-height: 0px;
 }
 
 .theia-breadcrumbs {
   /* height: var(--theia-breadcrumbs-height); */
+  height: 0px;
   position: relative;
   user-select: none;
   display: flex;
@@ -83,7 +84,7 @@
 .theia-breadcrumb-item-haspopup:hover {
   background: var(--theia-accent-color3);
   cursor: pointer;
-}
+} 
 
 #theia-breadcrumbs-popups-overlay {
   height: 0px;
