--- a/packages/memory-inspector/src/browser/style/index.css
+++ b/packages/memory-inspector/src/browser/style/index.css
@@ -85,8 +85,8 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  /* background-color: var(--theia-editor-background); */
-  background-color: #202025;
+  background-color: var(--theia-editor-background);
+  /* background-color: #202025; */
   height: 100%;
   white-space: nowrap;
 }
@@ -122,8 +122,8 @@
 }
 
 .t-mv-header-label {
-  /* background-color: var(--theia-editor-background); */
-  background-color: #202025;
+  background-color: var(--theia-editor-background);
+  /* background-color: #202025; */
   border-radius: 10px;
   font-weight: 400;
   padding: 2px 5px 2px 5px;
@@ -134,14 +134,14 @@
 }
 
 .t-mv-view .eight-bits.changed {
-  /* background-color: var(--theia-memoryInspector-foreground); */
-  background-color: #1c1c28;
+  background-color: var(--theia-memoryInspector-foreground);
+  /* background-color: #1c1c28; */
   color: var(--theia-editor-background);
 }
 
 .t-mv-view .eight-bits.changed:hover {
-  /* background-color: var(--theia-memoryInspector-foreground); */
-  background-color: #1c1c28;
+  background-color: var(--theia-memoryInspector-foreground);
+  /* background-color: #1c1c28; */
   opacity: 0.85;
 }
 
@@ -151,13 +151,13 @@
 }
 
 .t-mv-view .eight-bits:not(.changed):not(.highlight):hover {
-  /* background-color: var(--theia-editor-inactiveSelectionBackground); */
-  background-color: #1c1c28;
+  background-color: var(--theia-editor-inactiveSelectionBackground);
+  /* background-color: #1c1c28; */
 }
 
 .t-mv-memory-container:focus .eight-bits.highlight {
-  /* background-color: var(--theia-editor-selectionBackground); */
-  background-color: #202025;
+  background-color: var(--theia-editor-selectionBackground);
+  /* background-color: #202025; */
   border-radius: 1px;
   border-bottom: solid 1px var(--theia-editorCursor-foreground);
 }
@@ -375,8 +375,8 @@ table.t-mv-view .t-mv-view-row.t-mv-view-row-highlight {
 }
 
 table.t-mv-view .t-mv-view-row:hover {
-  /* background-color: var(--theia-sideBar-background); */
-  background-color: #1c1c28;
+  background-color: var(--theia-sideBar-background);
+  /* background-color: #1c1c28; */
 }
 
 table.t-mv-view .t-mv-view-address {
