--- a/packages/plugin-ext/src/main/browser/style/plugin-sidebar.css
+++ b/packages/plugin-ext/src/main/browser/style/plugin-sidebar.css
@@ -37,8 +37,8 @@
 }
 
 .theia-plugins .pluginHeaderContainer:hover {
-  /* background: var(--theia-list-hoverBackground); */
-  background-color: rgb(25 25 41 / var(--tw-bg-opacity, 1));
+  background: var(--theia-list-hoverBackground);
+  /* background-color: rgb(25 25 41 / var(--tw-bg-opacity, 1)); */
 
 }
 
